adjusted how HTML is dynamically created by JS to ensure neatness and readability. appending pre element for each weather condition to ensure that text wraps where appropriate."

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,7 @@ header {
 #city-name {
     color:white;
 }
+
+pre {
+    font-family: inherit;
+}
